--- a/app/src/main/res/layout/aktivasi.xml
+++ b/app/src/main/res/layout/aktivasi.xml
@@ -1,174 +1,159 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/layout_activ"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background1"
-    tools:context=".Aktivasi">
+    android:background="@color/white">
 
-    <!-- Container for the fragments -->
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"/>
+    <TextView
+        android:id="@+id/tregis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aktivasi"
+        android:textSize="32sp"
+        android:layout_marginTop="300dp"
+        android:paddingStart="34dp" />
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+    <ImageView
+        android:id="@+id/gambar"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="105dp"
+        android:src="@drawable/gambar_reg" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_activ"
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nik"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tregis"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="65dp"
+        android:hint="Masukkan NIK"
+        android:padding="5dp"
+        android:textColorHint="@color/grey"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="19dp"
+        app:boxCornerRadiusBottomStart="19dp"
+        app:boxCornerRadiusTopEnd="19dp"
+        app:boxCornerRadiusTopStart="19dp"
+        app:boxStrokeColor="@color/blue"
+        app:hintTextColor="@color/bluefiled"
+        app:startIconTint="@color/blue">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_nik"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="number"
+            android:maxLength="20"
+            android:paddingStart="20dp"
+            android:textColor="@color/grey"
+            android:textSize="13sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/pass"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/nik"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="65dp"
+        android:hint="Masukkan Password"
+        android:padding="5dp"
+        android:textColorHint="@color/grey"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="19dp"
+        app:boxCornerRadiusBottomStart="19dp"
+        app:boxCornerRadiusTopEnd="19dp"
+        app:boxCornerRadiusTopStart="19dp"
+        app:boxStrokeColor="@color/blue"
+        app:hintTextColor="@color/bluefiled"
+        app:startIconTint="@color/blue">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_pass"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword"
+            android:maxLength="20"
+            android:paddingStart="20dp"
+            android:textColor="@color/grey"
+            android:textSize="13sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/notelpinputlayout"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/pass"
+        android:layout_marginEnd="64dp"
+        android:layout_marginStart="65dp"
+        android:hint="Masukkan Nomer Telepon"
+        android:padding="5dp"
+        android:textColorHint="@color/grey"
+        app:boxBackgroundMode="outline"
+        app:boxCornerRadiusBottomEnd="19dp"
+        app:boxCornerRadiusBottomStart="19dp"
+        app:boxCornerRadiusTopEnd="19dp"
+        app:boxCornerRadiusTopStart="19dp"
+        app:boxStrokeColor="@color/blue"
+        app:hintTextColor="@color/bluefiled"
+        app:startIconTint="@color/blue">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/input_notelp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPassword"
+            android:maxLength="20"
+            android:paddingStart="20dp"
+            android:textColor="@color/grey"
+            android:textSize="13sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/btn_aktivasi"
+        android:layout_width="215dp"
+        android:layout_height="48dp"
+        android:layout_below="@id/notelpinputlayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/button_background"
+        android:backgroundTint="@color/blueterang"
+        android:elevation="8dp"
+        android:text="Aktivasi"
+        android:textColor="@android:color/white"
+        android:textSize="18sp" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/btn_aktivasi"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_no_account"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            app:cardBackgroundColor="@android:color/white"
-            app:cardCornerRadius="15dp"
-            app:cardElevation="10dp">
+            android:text="Sudah Aktivasi Akun?"
+            android:textColor="@color/black" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="24dp">
+        <TextView
+            android:id="@+id/tv_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Log in"
+            android:textColor="@color/blueterang"
+            android:textStyle="bold" />
+    </LinearLayout>
 
-                <TextView
-                    android:id="@+id/text_title_activ"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginBottom="16dp"
-                    android:fontFamily="@font/kanit_medium"
-                    android:text="Aktivasi"
-                    android:textAlignment="center"
-                    android:textColor="@color/black"
-                    android:textSize="32sp"
-                    android:textStyle="bold" />
-
-                <EditText
-                    android:id="@+id/input_nik"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/custom_input"
-                    android:drawablePadding="5dp"
-                    android:hint="Masukkan NIK"
-                    android:inputType="number"
-                    android:paddingStart="10dp"
-                    android:textColorHint="#645D5D"
-                    android:textSize="16dp" />
-
-                <EditText
-                    android:id="@+id/etEmail"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/custom_input"
-                    android:drawablePadding="5dp"
-                    android:paddingStart="10dp"
-                    android:hint="Masukkan Email"
-                    android:inputType="phone"
-                    android:textColorHint="#645D5D"
-                    android:textSize="16dp" />
-
-                <!-- Password input with show/hide icon centered -->
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp">
-
-                    <EditText
-                        android:id="@+id/etPassword"
-                        android:layout_width="match_parent"
-                        android:layout_height="52dp"
-                        android:background="@drawable/custom_input"
-                        android:hint="Masukkan Password"
-                        android:drawablePadding="5dp"
-                        android:inputType="textPassword"
-                        android:paddingStart="10dp"
-                        android:textColorHint="#645D5D"
-                        android:textSize="16sp"
-                        android:paddingEnd="40dp" /> <!-- Padding to avoid text overlap with icon -->
-
-
-
-                    <!-- Show/Hide Password Icon -->
-                    <ImageView
-                        android:id="@+id/icon_show_hide_password"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginEnd="10dp"
-                        android:src="@drawable/baseline_visibility_24"
-                        android:contentDescription="Show/Hide Password"
-                        android:padding="8dp" /> <!-- Optional padding for touch area -->
-
-                </RelativeLayout>
-
-                <EditText
-                    android:id="@+id/etConfirmPassword"
-                    android:layout_width="match_parent"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="16dp"
-                    android:background="@drawable/custom_input"
-                    android:drawablePadding="5dp"
-                    android:hint="Konfirmasi Password"
-                    android:inputType="number"
-                    android:paddingStart="10dp"
-                    android:textColorHint="#645D5D"
-                    android:textSize="16dp" />
-
-
-                <Button
-                    android:id="@+id/btnRegister"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="30dp"
-                    android:background="@drawable/button_background"
-                    android:backgroundTint="@color/blueterang"
-                    android:elevation="8dp"
-                    android:text="Masuk"
-                    android:textColor="@android:color/white"
-                    android:textSize="18dp" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="8dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/text_already"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Sudah Aktivasi?"
-                        android:textColor="@color/black" />
-
-                    <TextView
-                        android:id="@+id/text_go_login"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:text="Login"
-                        android:textColor="@color/blueterang"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-    </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
