--- a/app/src/main/res/layout/new_password.xml
+++ b/app/src/main/res/layout/new_password.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_np"
-    tools:context=".NewPassword">
+    tools:context=".NewPassword"
+    tools:ignore="MissingConstraints">
 
     <!-- Ikon Kembali -->
     <ImageView
@@ -55,7 +56,7 @@
 
     <!-- Input Kata Sandi Baru -->
     <EditText
-        android:id="@+id/input_pw"
+        android:id="@+id/otp"
         android:layout_width="306dp"
         android:layout_height="52dp"
         android:layout_marginTop="28dp"
@@ -63,7 +64,7 @@
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_password"
         android:ems="10"
-        android:hint="   Masukkan Password Baru"
+        android:hint="Masukkan Kode OTP"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -72,25 +73,33 @@
 
     <!-- Input Konfirmasi Password -->
     <EditText
-        android:id="@+id/input_pw_confirm"
+        android:id="@+id/new_password"
         android:layout_width="306dp"
         android:layout_height="52dp"
         android:background="@drawable/custom_input"
         android:drawableStart="@drawable/ic_password"
         android:paddingStart="10dp"
         android:ems="10"
-        android:hint="   Konfirmasi Password"
+        android:hint="Masukkan Password Baru"
         android:inputType="textPassword"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/input_pw"
+        app:layout_constraintEnd_toEndOf="@+id/otp"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/input_pw"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw"
+        app:layout_constraintStart_toStartOf="@+id/otp"
+        app:layout_constraintTop_toBottomOf="@+id/otp"
         app:layout_constraintVertical_bias="0.05" />
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/proggres"
+        android:visibility="gone"
+        android:layout_margin="20dp"
+         />
 
     <!-- Tombol Kirim -->
     <Button
-        android:id="@+id/btn_submit"
+        android:id="@+id/btnSubmit"
         android:layout_width="306dp"
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
@@ -100,6 +109,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_pw_confirm" />
+        app:layout_constraintTop_toBottomOf="@+id/new_password" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
