--- a/app/src/main/res/drawable/fotoprofil.xml
+++ b/app/src/main/res/drawable/fotoprofil.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@null"/>
     <corners android:radius="500dp"/>
-    <stroke android:width="3dp" android:color="@color/black"/>
+    <stroke android:width="3dp" android:color="@color/white"/>
 </shape>
